--- a/Week-14/Wealth_Portfolio/package.json
+++ b/Week-14/Wealth_Portfolio/package.json
@@ -3,8 +3,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --respawn src/index.ts",
+    "build": "tsc",
+    "start": "nodemon src/index.ts"
+  },
+  "devDependencies": {
+    "@tsconfig/node16": "^1.0.3",
+    "@types/node": "^18.7.23",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
+  },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.7",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "nodemon": "^2.0.20"
+    "mongoose": "^6.6.3",
+    "validatorjs": "^3.22.1"
   }
 }
