--- a/Week-14/Wealth_Portfolio/package.json
+++ b/Week-14/Wealth_Portfolio/package.json
@@ -6,21 +6,30 @@
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
-    "start": "nodemon src/index.ts"
+    "start": "nodemon --exec ts-node src/index.ts"
   },
   "devDependencies": {
-    "@tsconfig/node16": "^1.0.3",
-    "@types/node": "^18.7.23",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.4"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/lodash": "^4.14.182",
+    "@types/mongoose-paginate": "^5.0.11",
+    "@types/node": "^17.0.23",
+    "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.7.2",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.14",
-    "@types/multer": "^1.4.7",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.1",
-    "mongoose": "^6.6.3",
-    "validatorjs": "^3.22.1"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.2.10",
+    "mongoose-paginate": "^5.0.3",
+    "validator": "^13.7.0"
   }
 }
