complate week 14 assignment

--- a/Week-14/Wealth_Portfolio/.env
+++ b/Week-14/Wealth_Portfolio/.env
@@ -1,3 +1,15 @@
 PORT = 8080
 
 DATABASE_URL = mongodb://localhost:27017/wealthportfolio
+
+JWT_PRIVATE_KEY=wealthportfolio8080
+
+EMAIL_PORT=587
+
+EMAIL_SECURE=true
+
+EMAIL_HOST=smtp.ethereal.email
+
+EMAIL_USERNAME=mafalda.kerluke17@ethereal.email
+
+EMAIL_PASSWORD=FxzXF9ZWzTxUCRNEzZ
