--- a/Week-14/Wealth_Portfolio/package.json
+++ b/Week-14/Wealth_Portfolio/package.json
@@ -10,10 +10,12 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.182",
     "@types/mongoose-paginate": "^5.0.11",
+    "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.23",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.2",
@@ -22,6 +24,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.6",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -30,6 +33,9 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.2.10",
     "mongoose-paginate": "^5.0.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "validator": "^13.7.0"
   }
 }
